--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -63,7 +63,7 @@
     <color name="textColorSecondaryDark">#212121</color>
     <color name="textColorSecondaryLight">#666666</color>
 
-    <color name="windowBackground">#F1F5F8</color>
+    <color name="windowBackground">#f8f8ff</color>
     <color name="windowBackgroundDark">#F9F9F9</color>
     <color name="windowBackgroundLight">#d0e5f4</color>
 
