--- a/app/src/main/res/drawable/edittext_left_corners_green.xml
+++ b/app/src/main/res/drawable/edittext_left_corners_green.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/colorPrimary" />
-    <stroke android:width="1dp" android:color="#BDBEC2"  />
+    <stroke android:width="1dp" android:color="@color/colorPrimary"  />
 
     <corners android:topLeftRadius="4dp" android:topRightRadius="0dp"
         android:bottomLeftRadius="4dp" android:bottomRightRadius="0dp"/>
