--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -54,8 +54,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/logo_bg"
                     android:layout_marginTop="15dp"
-                    android:layout_marginStart="28dp"
-                    android:layout_marginEnd="28dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginEnd="25dp"
                     android:paddingTop="20dp"
                     android:paddingBottom="20dp"
                     android:background="@drawable/background_custom_dialog"
@@ -114,15 +114,15 @@
 
 
 
+
                                 <TextView
                                     android:id="@+id/text_country_code"
                                     android:layout_width="0dp"
                                     android:layout_height="match_parent"
-                                    android:layout_weight="0.3"
                                     android:gravity="center"
                                     android:text="+256"
                                     android:textColor="#303030"
-                                    android:autoSizeMaxTextSize="12sp"
+                                    android:textSize="12sp"
                                     android:layout_marginStart="10dp"
                                     android:layout_marginEnd="6dp"
                                     app:drawableEndCompat="@drawable/ic_chevron_down"
@@ -153,7 +153,6 @@
                                     android:padding="5dp"
                                     android:textSize="12sp"
                                     android:hint="Enter your mobile number"
-                                    android:layout_marginStart="10dp"
                                     app:layout_constraintTop_toTopOf="parent"
                                     app:layout_constraintStart_toEndOf="@id/view"
                                     app:layout_constraintEnd_toEndOf="parent"/>
@@ -164,7 +163,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:orientation="vertical"
-                                    app:layout_constraintGuide_percent="0.34" />
+                                    app:layout_constraintGuide_percent="0.41" />
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
