--- a/app/src/main/res/layout/new_emaisha_pay_home.xml
+++ b/app/src/main/res/layout/new_emaisha_pay_home.xml
@@ -11,7 +11,7 @@
         tools:context="com.cabral.emaishapay.fragments.wallet_fragments.WalletHomeFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#f5fbff">
+        android:background="#f8f8ff">
 
 
         <RelativeLayout
