--- a/app/src/main/res/layout/signup_fragment.xml
+++ b/app/src/main/res/layout/signup_fragment.xml
@@ -178,7 +178,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:visibility="visible">
+                        android:visibility="gone">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -463,7 +463,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:visibility="gone">
+                        android:visibility="visible">
 
 
                         <LinearLayout
@@ -505,9 +505,11 @@
                                         android:layout_gravity="center"
                                         android:background="@android:color/transparent"
                                         android:gravity="center"
-                                        android:spinnerMode="dropdown" />
+                                        android:spinnerMode="dropdown"
+                                        android:layout_toStartOf="@id/dropdown"/>
 
                                     <ImageView
+                                        android:id="@+id/dropdown"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_alignParentEnd="true"
@@ -571,9 +573,11 @@
                                         android:layout_gravity="center"
                                         android:background="@android:color/transparent"
                                         android:gravity="center"
-                                        android:spinnerMode="dropdown" />
+                                        android:spinnerMode="dropdown"
+                                        android:layout_toStartOf="@id/dropdown2"/>
 
                                     <ImageView
+                                        android:id="@+id/dropdown2"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_alignParentEnd="true"
@@ -636,9 +640,11 @@
                                         android:layout_gravity="center"
                                         android:background="@android:color/transparent"
                                         android:gravity="center"
-                                        android:spinnerMode="dropdown" />
+                                        android:spinnerMode="dropdown"
+                                        android:layout_toStartOf="@id/dropdown3"/>
 
                                     <ImageView
+                                        android:id="@+id/dropdown3"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_alignParentEnd="true"
