Sales View MV implementation

--- a/app/src/main/res/layout/fragment_shop_sales.xml
+++ b/app/src/main/res/layout/fragment_shop_sales.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -40,7 +43,7 @@
             android:padding="10dp" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler"
+            android:id="@+id/recycler_sales"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -87,3 +90,5 @@
 
 
 </RelativeLayout>
+
+</layout>
