--- a/app/src/main/res/layout/fragment_shop_sales.xml
+++ b/app/src/main/res/layout/fragment_shop_sales.xml
@@ -58,7 +58,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -69,9 +69,9 @@
 
                     <ImageView
                         android:id="@+id/image_no_product"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="center"/>
+                        android:layout_width="300dp"
+                        android:layout_height="200dp"
+                        android:layout_marginTop="50dp" />
 
                     <TextView
                         android:id="@+id/txt_no_products"
@@ -79,6 +79,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/josefin_sans"
                         android:gravity="center"
+                        android:text="Receive and track sales from here"
                         android:textColor="#31244A"
                         android:textSize="24sp"
                         android:textStyle="bold"/>
