--- a/app/src/main/res/layout/fragment_sales_details.xml
+++ b/app/src/main/res/layout/fragment_sales_details.xml
@@ -31,7 +31,7 @@
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler"
+                android:id="@+id/sales_Products_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
