Fix  Shop Payment Navigation issues

--- a/app/src/main/res/navigation/wallet_home_navigation.xml
+++ b/app/src/main/res/navigation/wallet_home_navigation.xml
@@ -222,6 +222,10 @@
             <action
                 android:id="@+id/action_walletAccountFragment2_to_walletHomeFragment2"
                 app:destination="@id/walletHomeFragment2" />
+
+            <action
+                android:id="@+id/action_walletAccountFragment2_to_acceptPaymentFragment"
+                app:destination="@id/acceptPaymentFragment" />
             <action
                 android:id="@+id/action_walletAccountFragment2_to_walletTransactionsListFragment2"
                 app:destination="@id/walletTransactionsListFragment" />
